[workspace]
resolver = "2"
members = [ 
    "lib/core_api", 
    "lib/config", 
    "lib/database",
    "lib/macros", 
    "lib/cluster",
    "lib/protocol",
    "lib/raknet",
    "lib/toolkit",
    "lib/upk", 
    "lib/zone",
    "lib/obj_params",
    "lib/realm_api",
    "services/core_service",
    "services/cluster_server", 
    "services/dungeon_service", 
    "services/frontend_server",
    "services/login_server", 
    "services/realm_manager_service", 
    "services/world_service",
    "tools/kismet-plotter",
    "tools/seed-realm"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
