[package]
name = "atlas"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
bevy_ecs = "0.12.1"
bitstream-io = "1.7.0"
bson = { version = "2.8.1", features = ["uuid-1"] }
futures = "0.3.29"
glam = { version = "0.24.2", features = ["serde"] }
log = { version = "0.4.20", features = ["kv_unstable", "kv_unstable_serde"] }
nom = "7.1.3"
parking_lot = { version = "0.12.1", features = ["hardware-lock-elision"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlite = "0.31.1"
tokio = { version = "1.32.0", features = ["full"] }
uuid = "1.6.1"

[build-dependencies]
serde = { version = "1.0.183",  features = ["derive"] }
quote = "1.0.32"
prettyplease = "0.2.12"
syn = "2.0.28"
proc-macro2 = { version = "1.0.66", features = ["span-locations"] }
convert_case = "0.6.0"
yaml-rust = "0.4.5"
linked-hash-map = "0.5.6"
nom = "7.1.3"
sqlite = "0.31.1"
regex = "1.10.2"
itertools = "0.11.0"
