[package]
name = "atlas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitstream-io = "1.7.0"
glam = { version = "0.24.2", features = ["serde"] }
log = "0.4.20"
net = "0.1.0"
nom = "7.1.3"
serde = { version = "1.0.188", features = ["derive"] }
serde-hex = "0.1.0"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }

[build-dependencies]
serde = { version = "1.0.183",  features = ["derive"] }
serde_yaml = "0.9.25"
quote = "1.0.32"
rustfmt = "0.10.0"
typify = "0.0.14"
prettyplease = "0.2.12"
syn = "2.0.28"
proc-macro2 = { version = "1.0.66", features = ["span-locations"] }
convert_case = "0.6.0"
yaml-rust = "0.4.5"
linked-hash-map = "0.5.6"
nom = "7.1.3"
glob = "0.3.1"
