[package]
name = "atlas"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_float_eq = "1.1.3"
async-recursion = "1.0.5"
bitflags = "2.4.0"
bitstream-io = "1.7.0"
digest = "0.10.7"
glam = { version = "0.24.2", features = ["serde"] }
legion = "0.4.0"
log = { version = "0.4.20", features = ["kv_unstable", "kv_unstable_serde"] }
multiset-hash = "0.2.0"
net = "0.1.0"
nom = "7.1.3"
serde = { version = "1.0.188", features = ["derive"] }
serde-hex = "0.1.0"
serde_json = "1.0.107"
serde_path_to_error = "0.1.14"
sha2 = "0.10.8"
sqlite = "0.31.1"
test-case = "3.2.1"
test-generator = "0.3.1"
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }

[build-dependencies]
serde = { version = "1.0.183",  features = ["derive"] }
serde_yaml = "0.9.25"
quote = "1.0.32"
rustfmt = "0.10.0"
typify = "0.0.14"
prettyplease = "0.2.12"
syn = "2.0.28"
proc-macro2 = { version = "1.0.66", features = ["span-locations"] }
convert_case = "0.6.0"
yaml-rust = "0.4.5"
linked-hash-map = "0.5.6"
nom = "7.1.3"
glob = "0.3.1"
sqlite = "0.31.1"
regex = "1.9.6"
itertools = "0.11.0"
