[package]
name = "cluster"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.8.0"
flexbuffers = "2.0.0"
futures-channel = "0.3.31"
futures-util = "0.3.31"
log = "0.4.22"
serde = { version = "1.0.210", features = ["serde_derive"] }
thiserror = "1.0.64"
tokio = { version = "1.41.0", features = ["full"] }
toolkit = { version = "0.1.0", path = "../toolkit" }
zeromq = { version = "0.4.1", path = "../../external/zmq.rs" }
