[package]
name = "cluster"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
bytes = { workspace = true }
flexbuffers = { workspace = true }
futures-channel = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toolkit = { workspace = true }
zeromq = { workspace = true }
