[package]
name = "core_api"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
cluster = { workspace = true }
core_service = { workspace = true }
cynic = { workspace = true }
reqwest = { workspace = true }
steamworks = { workspace = true }
thiserror = { workspace = true }
toolkit = { workspace = true }

[build-dependencies]
core_service = { version = "0.1.0", path = "../../services/core_service" }
cynic-codegen = "3.9.1"
