[package]
name = "obj_params"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
bevy_ecs = "0.14.2"
bitstream-io = "2.5.3"
glam = { version = "0.29.0", features = ["serde"] }
log = "0.4.22"
nom = "7.1.3"
once_cell = "1.20.2"
phf = { version = "0.11.2", features = ["macros"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
toolkit = { version = "0.1.0", path = "../toolkit" }

[build-dependencies]
convert_case = "0.6.0"
itertools = "0.13.0"
nom = "7.1.3"
prettyplease = "0.2.25"
proc-macro2 = "1.0.89"
quote = "1.0.37"
regex = "1.11.1"
syn = "2.0.85"
uuid = "1.11.0"
