[package]
name = "obj_params"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
base64 = { workspace = true }
bevy = { workspace = true }
bitstream-io = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
nom = { workspace = true }
once_cell = { workspace = true }
phf = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toolkit = { workspace = true }
flexbuffers = { workspace = true }

[build-dependencies]
convert_case = "0.6.0"
itertools = "0.13.0"
nom = "7.1.3"
prettyplease = "0.2.25"
proc-macro2 = "1.0.92"
quote = "1.0.37"
regex = "1.11.1"
syn = "2.0.90"
uuid = "1.11.0"
