[package]
name = "obj_params"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
base64 = { workspace = true }
bevy = { workspace = true }
bitstream-io = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
nom = { workspace = true }
once_cell = { workspace = true }
phf = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toolkit = { workspace = true }
flexbuffers = { workspace = true }
anyhow.workspace = true
