[package]
name = "pepkg"
version = "0.1.0"
edition = "2024"
publish = false
rust-version.workspace = true
license = "AGPL-3.0-or-later"

[dependencies]
anyhow.workspace = true
log.workspace = true
nom.workspace = true
quick-xml = "0.38.3"
serde.workspace = true
serde-xml-rs = "0.8.2"
thiserror.workspace = true
