[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[build-dependencies]
convert_case = "0.6.0"
itertools = "0.13.0"
prettyplease = "0.2.22"
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = "2.0.79"
yaml-rust = "0.4.5"

[dependencies]
bitstream-io = "2.5.3"
bson = { version = "2.13.0", features = ["uuid-1"] }
log = "0.4.22"
nom = "7.1.3"
toolkit = { version = "0.1.0", path = "../toolkit" }
uuid = { version = "1.10.0", features = ["v1", "v4"] }
