[package]
name = "protocol"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[build-dependencies]
convert_case = "0.6.0"
itertools = "0.14.0"
prettyplease = "0.2.37"
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = "2.0.105"
yaml-rust = "0.4.5"

[dependencies]
bitstream-io = { workspace = true }
bson = { workspace = true }
log = { workspace = true }
nom = { workspace = true }
toolkit = { workspace = true }
glam = { workspace = true }
