[package]
name = "raknet"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false
description = "A RakNet 3.3x2 implementation, specifically for the otherland next mmo. Loosely inspired by https://github.com/b23r0/rust-raknet"

[dependencies]
aes = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }
portable-atomic = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
