[package]
name = "realm_api"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
bson = { workspace = true }
cluster = { workspace = true }
chrono = { workspace = true }
cynic = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
obj_params = { workspace = true }
realm_manager_service = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toolkit = { workspace = true }

[build-dependencies]
cynic-codegen = "3.9.1"
realm_manager_service = { version = "0.1.0", path = "../../services/realm_manager_service" }
