[package]
name = "scripting"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = { workspace = true }
bevy = { workspace = true }
derive_builder = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
toolkit = { workspace = true }
obj_params = { workspace = true }
mlua = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = "0.6.0"
convert_case = "0.8.0"
