[package]
name = "toolkit"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
anyhow = "1.0.93"
async-graphql = { version = "7.0.11", features = ["uuid"] }
bitstream-io = "2.5.3"
bson = { version = "2.13.0", features = ["uuid-1"] }
config = { version = "0.1.0", path = "../config" }
cynic-codegen = "3.8.0"
database = { version = "0.1.0", path = "../database" }
dotenvy = "0.15.7"
env_logger = "0.11.5"
futures = "0.3.31"
futures-util = "0.3.31"
glam = "0.29.0"
log = { version = "0.4.22", features = ["kv"] }
macros = { version = "0.1.0", path = "../macros" }
mongodb = "3.1.0"
nom = "7.1.3"
once_cell = "1.20.2"
serde = "1.0.210"
thiserror = "2.0.3"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
