[package]
name = "toolkit"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true }
bitstream-io = { workspace = true }
bson = { workspace = true }
config = { workspace = true }
cynic-codegen = { workspace = true }
database = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
macros = { workspace = true }
mongodb = { workspace = true }
mlua = { workspace = true }
nom = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
