[package]
name = "upk"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
async-trait = "0.1.77"
bitflags = "2.4.2"
futures = "0.3.30"
log = "0.4.20"
nom = { version = "7.1.3", features = ["alloc"] }
once_cell = "1.19.0"
tokio = { version = "1.36.0", features = ["test-util", "macros", "io-util", "fs"] }
uuid = "1.7.0"
