[package]
name = "zone"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
bevy = { workspace = true }
derive_builder = { workspace = true }
obj_params = { workspace = true }
realm_api = { workspace = true }
thiserror = { workspace = true }
toolkit = { workspace = true }
