[package]
name = "cluster_router"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
once_cell = "1.20.2"
raknet = { version = "0.1.0", path = "../../lib/raknet" }
reqwest = "0.12.9"
tokio = { version = "1.40.0", features = ["full"] }
toolkit = { version = "0.1.0", path = "../../lib/toolkit" }
