[package]
name = "cluster_router"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
cluster = { workspace = true }
core_api = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
raknet = { workspace = true }
realm_api = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toolkit = { workspace = true }
