[package]
name = "core_service"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[lib]
name = "core_service"
path = "src/lib.rs"

[[bin]]
name = "core_service"
path = "src/main.rs"

[dependencies]
async-graphql = { workspace = true }
async-graphql-poem = { workspace = true }
bcrypt = { workspace = true }
bson = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
database = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
cluster = { workspace = true }
mongodb = { workspace = true }
poem = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toolkit = { workspace = true }
