[package]
name = "frontend_server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
core_api = { version = "0.1.0", path = "../../lib/core_api" }
cynic = { version = "3.8.0", features = ["http-reqwest", "reqwest"] }
log = "0.4.22"
once_cell = "1.20.2"
protocol = { version = "0.1.0", path = "../../lib/protocol" }
raknet = { version = "0.1.0", path = "../../lib/raknet" }
realm_api = { version = "0.1.0", path = "../../lib/realm_api" }
reqwest = "0.12.8"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
toolkit = { version = "0.1.0", path = "../../lib/toolkit" }
