[package]
name = "frontend_server"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
bitstream-io = { workspace = true }
clap = { workspace = true }
core_api = { workspace = true }
cynic = { workspace = true }
log = { workspace = true }
obj_params = { workspace = true }
once_cell = { workspace = true }
protocol = { workspace = true }
raknet = { workspace = true }
realm_api = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toolkit = { workspace = true }
futures-util = { workspace = true }
