[package]
name = "login_server"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
async-graphql = "7.0.11"
base64 = "0.22.1"
clap = { version = "4.5.20", features = ["derive", "env"] }
cynic = { version = "3.8.0", features = ["http-reqwest", "reqwest"] }
log = "0.4.22"
once_cell = "1.20.2"
poem = "3.1.1"
protocol = { version = "0.1.0", path = "../../lib/protocol" }
raknet = { version = "0.1.0", path = "../../lib/raknet" }
reqwest = "0.12.8"
steamworks = "0.11.0"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
toolkit = { version = "0.1.0", path = "../../lib/toolkit" }

[build-dependencies]
toolkit = { version = "0.1.0", path = "../../lib/toolkit" }
