[package]
name = "login_server"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
core_api = { version = "0.1.0", path = "../../lib/core_api" }
clap = { version = "4.5.20", features = ["derive", "env"] }
log = "0.4.22"
once_cell = "1.20.2"
poem = "3.1.1"
protocol = { version = "0.1.0", path = "../../lib/protocol" }
raknet = { version = "0.1.0", path = "../../lib/raknet" }
reqwest = "0.12.8"
steamworks = "0.11.0"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
toolkit = { version = "0.1.0", path = "../../lib/toolkit" }
