[package]
name = "login_server"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
core_api = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
poem = { workspace = true }
protocol = { workspace = true }
raknet = { workspace = true }
reqwest = { workspace = true }
steamworks = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toolkit = { workspace = true }
