[package]
name = "realm_manager_service"
version = "0.1.0"
edition = "2021"

[lib]
name = "realm_manager_service"
path = "src/lib.rs"

[[bin]]
name = "realm_manager_service"
path = "src/main.rs"

[dependencies]
async-graphql = { version = "7.0.11", features = ["bson", "chrono", "chrono-tz", "uuid"] }
async-graphql-poem = "7.0.11"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive", "env"] }
cluster = { version = "0.1.0", path = "../../lib/cluster" }
core_service = { version = "0.1.0", path = "../core_service" }
cynic = { version = "3.8.0", features = ["http-reqwest", "reqwest"] }
database = { version = "0.1.0", path = "../../lib/database" }
log = "0.4.22"
mongodb = "3.1.0"
obj_params = { version = "0.1.0", path = "../../lib/obj_params" }
poem = "3.1.3"
reqwest = "0.12.8"
serde = { version = "1.0.214", features = ["serde_derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
toolkit = { version = "0.1.0", path = "../../lib/toolkit" }
zeromq = "0.4.1"
