[package]
name = "realm_manager_service"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[lib]
name = "realm_manager_service"
path = "src/lib.rs"

[[bin]]
name = "realm_manager_service"
path = "src/main.rs"

[dependencies]
async-graphql = { workspace = true }
async-graphql-poem = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
cluster = { workspace = true }
core_api = { workspace = true }
cynic = { workspace = true }
database = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
mongodb = { workspace = true }
obj_params = { workspace = true }
poem = { workspace = true }
rand.workspace = true
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toolkit = { workspace = true }
