[package]
name = "realm_manager_service"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[lib]
name = "realm_manager_service"
path = "src/lib.rs"

[[bin]]
name = "realm_manager_service"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-graphql = { workspace = true }
async-graphql-poem = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
cluster = { workspace = true }
content = { version = "0.1.0", path = "../../lib/content" }
core_api = { workspace = true }
cynic = { workspace = true }
database = { workspace = true }
derive_builder.workspace = true
futures-util = { workspace = true }
log = { workspace = true }
mongodb = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
obj_params = { workspace = true }
poem = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
saphyr = { workspace = true }
serde-saphyr.workspace = true
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toolkit = { workspace = true }
