[package]
name = "world_service"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = { workspace = true }
bevy = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
cluster = { workspace = true }
core_api = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
protocol = { workspace = true }
realm_api = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toolkit = { workspace = true }
zone = { workspace = true }
