[package]
name = "world_service"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[lib]
name = "world_service"
path = "src/lib.rs"

[[bin]]
name = "world_service"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
bevy = { workspace = true }
bitstream-io = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
cluster = { workspace = true }
core_api = { workspace = true }
derive_builder = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
protocol = { workspace = true }
realm_api = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toolkit = { workspace = true }
obj_params = { workspace = true }
rand.workspace = true
