[package]
name = "world_service"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[lib]
name = "world_service"
path = "src/lib.rs"

[[bin]]
name = "world_service"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
bevy = { workspace = true }
bitstream-io = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
cluster = { workspace = true }
core_api = { workspace = true }
derive_builder = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
protocol = { workspace = true }
realm_api = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
scripting = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toolkit = { workspace = true }
obj_params = { workspace = true }
rand.workspace = true
mlua = { workspace = true }
saphyr = { workspace = true }
tokio-util = { workspace = true }
futures.workspace = true
content = { version = "0.1.0", path = "../../lib/content" }
convert_case = "0.8.0"
regex = "1.11.3"
pepkg = { version = "0.1.0", path = "../../lib/pepkg" }
recastnavigation-rs = { workspace = true }
crc16 = "0.4.0"
bonsai-bt = "0.10.0"
spart = "0.3.1"
